[tool.poetry]
name = "slack-diary-importer"
version = "0.1.0"
description = ""
authors = ["sugyan <sugi1982@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.14.3"
python-dotenv = "^0.20.0"
requests-oauthlib = "^1.3.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
